# Sway

./: Cargo.toml  README.md  build.rs  index.html
.github/workflows/: deploy.yml
docs/: COLLISION_SYSTEM.md  LIMBS_INVERSE_KINEMATICS.md  PHYSICS_MOVEMENT.md  VISUALS_RENDERING.md
examples/: follow_mouse.json  lizard.json  lizards.json  snake.json
src/: lib.rs  main.rs
src/core/: constants.rs  mod.rs  mouse_input.rs  node.rs  physics.rs  playground.rs  resources.rs  serialization.rs  utils.rs
src/core/components/: distance_constraint.rs  limb.rs  mod.rs  node.rs  playground.rs
src/core/systems/: anchor_movement.rs  collision_avoidance.rs  constraint_solver.rs  fabrik.rs  graph.rs  limb_builder.rs  mod.rs  mouse_input.rs  physics.rs
src/editor/: components.rs  constants.rs  mod.rs  node_visual.rs  playground_visual.rs  resources.rs  selection.rs  tools.rs
src/editor/mesh/: limb.rs  mod.rs  primitives.rs  skin.rs
src/editor/tools/: camera.rs  constraint.rs  input.rs  mod.rs  node.rs  selection.rs
src/editor/visuals/: constraint.rs  mesh.rs  mod.rs  node.rs  params.rs  playground.rs  skin.rs
src/ui/: constants.rs  egui.rs  icons.rs  messages.rs  mod.rs  state.rs  systems.rs  widgets.rs
src/ui/panels/: bottom_toolbar.rs  floating_panel.rs  hints.rs  inspector.rs  inspector_content.rs  instructions.rs  mod.rs  playback.rs  toolbar.rs
src/ui/theme/: interaction.rs  layout.rs  mod.rs  palette.rs  typography.rs  widgets.rs
src/ui/widgets/: checkbox.rs  dropdown.rs  function_input.rs  markers.rs  mod.rs  text_input.rs
